# xval-python

./: README.md  build.bat  make_wheels.py  pyproject.toml  python  requirements.txt
example/: example.xact
example/fda_stat_ag33/: extract.csv  fda_stat_ag33.xact  non_elect_decrement_rates.csv  plan_code_values.csv  stat_discount_rates.csv  surrender_charge_schedule.csv
src/xval/: __init__.py  xval.py
