[build-system]
requires = ["setuptools>=71"]
build-backend = "setuptools.build_meta"

[project]
name = "xval"
version = "0.1.2"
description = "Xval's Python SDK"
authors = [
    {name = "Timothy Quast", email = "timothy.quast@xval.io"}
]
license = "MIT"
readme = "README.md"
keywords = ["xval", "xact", "actuary", "actuarial", "valuation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
    "src"
]

[tool.setuptools.package-data]
xval = ["*.dll"]

[project.urls]
Homepage = "https://xval.io"
Repository = "https://github.com/XvalSystems/xval-sdk"
